--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Deine Stimme Zählt – Abstimmen in der Schweiz</title>
+  <title>Deine Stimme Zählt – Wahlmotivation</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -12,15 +12,15 @@
   <section id="hero" class="hero">
     <div class="mountain-container">
       <div class="sky-gradient"></div>
-      <img class="mountain-image" src="assets/wallpaper.jpg" loading="eager" style="width:100%; height:100%; object-fit:cover; object-position:center;" />
+      <img class="mountain-image" src="assets/wallpaper.jpg" loading="eager"
+        style="width:100%; height:100%; object-fit:cover; object-position:center;" />
     </div>
 
     <div class="hero-content">
       <div class="container">
         <h1 class="fade-in-up" style="animation-delay: 0.2s;">Deine Stimme. Deine Zukunft.</h1>
         <p class="hero-description fade-in-up" style="animation-delay: 0.3s;">
-          In der Schweiz entscheidet jede Stimme. Gerade junge Menschen können mitbestimmen, wie sich ihr Alltag, ihre
-          Schule, ihr Beruf und ihre Zukunft entwickeln.
+          Netflix fragt dich öfter nach deiner Meinung als die Schweiz. Nutz es.
         </p>
         <div class="button-group fade-in-up" style="animation-delay: 0.4s;">
           <a class="btn btn-primary" href="https://apps.apple.com/ch/app/voteinfo/id1434819062" target="_blank">Jetzt
@@ -67,7 +67,8 @@
             <img class="icon" src="assets/people.svg">
           </div>
           <h3>Mitbestimmung leben</h3>
-          <p class="card-description">Direkte Demokratie heisst, dass nicht nur Politiker sondern auch du mit entscheidest</p>
+          <p class="card-description">Direkte Demokratie heisst, dass nicht nur Politiker sondern auch du mit
+            entscheidest</p>
           <p class="card-details">Stimm- und Wahlrecht ist kein Bonus, sondern ein Werkzeug, das dir ermöglicht, aktiv
             und mehrmals pro Jahr Einfluss zu nehmen.</p>
         </div>
@@ -137,7 +138,8 @@
         <div class="faq-item">
           <button class="faq-question"><span>Wo sehe ich, worüber abgestimmt wird?</span></button>
           <div class="faq-answer">
-            <p>In der <a href="https://apps.apple.com/ch/app/voteinfo/id1434819062" target="_blank">VoteInfo App</a>, in deinen Unterlagen oder auf der Website deines Kantons.</p>
+            <p>In der <a href="https://apps.apple.com/ch/app/voteinfo/id1434819062" target="_blank">VoteInfo App</a>, in
+              deinen Unterlagen oder auf der Website deines Kantons.</p>
           </div>
         </div>
       </div>
