--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       <div class="container">
         <h1 class="fade-in-up" style="animation-delay: 0.2s;">Deine Stimme. Deine Zukunft.</h1>
         <p class="hero-description fade-in-up" style="animation-delay: 0.3s;">
-          Netflix fragt dich öfter nach deiner Meinung als die Schweiz. Nutz es.
+          Nicht abstimmen ist wie im Restaurant ‘überrasch mich’ sagen und danach reklamieren.
         </p>
+
         <div class="button-group fade-in-up" style="animation-delay: 0.4s;">
           <a class="btn btn-primary" href="https://apps.apple.com/ch/app/voteinfo/id1434819062" target="_blank">Jetzt
             Informieren</a>
