--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <h1 class="fade-in-up" style="animation-delay: 0.2s;">Deine Stimme. Deine Zukunft.</h1>
         <p class="hero-description fade-in-up" style="animation-delay: 0.3s;">
-          Nicht abstimmen ist wie im Restaurant ‘überrasch mich’ sagen und danach reklamieren.
+          Netflix fragt dich öfter nach deiner Meinung als die Schweiz. Nutz es.
         </p>
 
         <div class="button-group fade-in-up" style="animation-delay: 0.4s;">
