--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="button-group fade-in-up" style="animation-delay: 0.4s;">
           <a class="btn btn-primary" href="https://apps.apple.com/ch/app/voteinfo/id1434819062" target="_blank">Jetzt
             Informieren</a>
-          <a href="#info" class="btn btn-outline">Warum Abstimmen?</a>
+          <a href="#info" class="btn btn-outline2">Warum Abstimmen?</a>
         </div>
       </div>
     </div>
