--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="stat-item" data-animate>
           <div class="stat-value">70%</div>
-          <div class="stat-label">Wahlbeteiligung der Jungen (60+)</div>
+          <div class="stat-label">Wahlbeteiligung der Älteren (60+)</div>
         </div>
         <div class="stat-item" data-animate>
           <div class="stat-value">4× im Jahr</div>
