--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img class="icon" src="assets/people.svg">
           </div>
           <h3>Mitbestimmung leben</h3>
-          <p class="card-description">Direkte Demokratie heisst, dass nicht nur Politiker sondern auch du mit
+          <p class="card-description">Die Schweizer Halbdirekte Demokratie heisst, dass nicht nur Politiker sondern auch du mit
             entscheidest</p>
           <p class="card-details">Stimm- und Wahlrecht ist kein Bonus, sondern ein Werkzeug, das dir ermöglicht, aktiv
             und mehrmals pro Jahr Einfluss zu nehmen.</p>
