--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             <img class="icon" src="assets/people.svg">
           </div>
           <h3>Mitbestimmung leben</h3>
-          <p class="card-description">Die Schweizer Halbdirekte Demokratie heisst, dass nicht nur Politiker sondern auch du mit
+          <p class="card-description">Die Schweizer Halbdirekte Demokratie heisst, dass nicht nur Politiker sondern auch
+            du mit
             entscheidest</p>
           <p class="card-details">Stimm- und Wahlrecht ist kein Bonus, sondern ein Werkzeug, das dir ermöglicht, aktiv
             und mehrmals pro Jahr Einfluss zu nehmen.</p>
@@ -105,6 +106,21 @@
       </div>
     </div>
   </section>
+
+  <section class="illustration-section">
+    <div class="container">
+      <div class="illustration-grid">
+
+        <div class="illustration-card" data-animate>
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fappenzell24.ch%2Fwp-content%2Fuploads%2Finn-appenzell_junge_mitte-952x536.jpg&f=1&nofb=1&ipt=60b791eeef9cb3bbe7c0aae857828e2ffc81e609b5aa4f8c2197694ff7dae82e" class="illustration-img" alt="Junge Menschen diskutieren Politik">
+          <h3>Junge Ideen formen die Zukunft</h3>
+          <p>Diese Gruppe zeigt, wie schnell aus einer gemeinsamen Idee eine Bewegung entsteht, wenn junge Menschen zusammenstehen.</p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
 
   <section id="faq" class="faq-section">
     <div class="container">
